Update InitialCreditsService to use dao instead of firecloudService